# crane_x7_mpc_ros2

./: .gitignore  .gitmodules  Dockerfile  README.md
.github/workflows/: ci.yaml
crane_x7_control/: CMakeLists.txt  crane_x7_hardware.xml  package.xml
crane_x7_control/config/: crane_x7_controllers.yaml
crane_x7_control/include/crane_x7_control/: crane_x7_driver.hpp  crane_x7_hardware.hpp  visibility_control.h
crane_x7_control/launch/: crane_x7_control.launch.py
crane_x7_control/src/: crane_x7_driver.cpp  crane_x7_hardware.cpp
crane_x7_description/: package.xml
crane_x7_description/launch/: display.launch.py
crane_x7_description/urdf/: crane_x7.gazebo.xacro  crane_x7.gazebo_ros2_control.xacro  crane_x7.ros2_control.xacro  crane_x7.urdf.xacro  crane_x7.xacro
crane_x7_gazebo/: CMakeLists.txt  package.xml
crane_x7_gazebo/config/: crane_x7_controller_effort.yaml  crane_x7_controller_position.yaml  crane_x7_controller_velocity.yaml  crane_x7_gazebo_controllers.yaml
crane_x7_gazebo/launch/: crane_x7_effort_ctrl.launch.py  crane_x7_gazebo.launch.py  crane_x7_position_ctrl.launch.py  crane_x7_velocity_ctrl.launch.py
crane_x7_mpc/: CMakeLists.txt  package.xml
crane_x7_mpc/config/: crane_x7_mpc.yaml
crane_x7_mpc/experiments/: task_space_3d_ocp.py  task_space_6d_ocp.py
crane_x7_mpc/include/crane_x7_mpc/: crane_x7_mpc.hpp  visiblity_control.h
crane_x7_mpc/launch/: crane_x7_mpc.launch.py
crane_x7_mpc/src/: crane_x7_mpc.cpp  crane_x7_mpc_composition.cpp  crane_x7_mpc_main.cpp
crane_x7_mpc/urdf/: crane_x7.urdf
crane_x7_mpc_ros2/: CMakeLists.txt  package.xml
