<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>crane_x7_control</name>
  <version>0.0.1</version>
  <description>The CRANE-X7 control package for ROS2</description>
  <maintainer email="katayama.25w@st.kyoto-u.ac.jp">Sotaro Katayama</maintainer>

  <license>TODO</license>

  <author email="katayama.25w@st.kyoto-u.ac.jp">Sotaro Katayama</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>controller_manager</depend>
  <depend>crane_x7_description</depend>
  <depend>dynamixel_sdk</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>ros2_controllers</depend>
  <depend>ros2controlcli</depend>
  <depend>xacro</depend>

  <!-- <buildtool_depend>ament_cmake</buildtool_depend> -->
  <!-- <build_depend>controller_manager</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>transmission_interface</build_depend>
  <build_depend>dynamixel_sdk</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>crane_x7_msgs</build_depend>
  <build_depend>joint_limits_interface</build_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>hardware_interface</run_depend>
  <run_depend>transmission_interface</run_depend>
  <run_depend>dynamixel_sdk</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>crane_x7_msgs</run_depend>
  <run_depend>gripper_action_controller</run_depend>
  <run_depend>joint_limits_interface</run_depend>
  <run_depend>joint_state_controller</run_depend>
  <run_depend>joint_trajectory_controller</run_depend> -->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>