<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>crane_x7_gazebo</name>
  <version>0.0.1</version>
  <description>CRANE-X7 gazebo simulation package for ROS2</description>
  <maintainer email="katayama.25w@st.kyoto-u.ac.jp">Sotaro Katayama</maintainer>

  <license>TODO</license>

  <author email="katayama.25w@st.kyoto-u.ac.jp">Sotaro Katayama</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>ament_index_python</depend>

  <depend>crane_x7_description</depend>
  <depend>robot_state_publisher</depend>
  <depend>controller_manager</depend>
  <depend>gazebo_ros_pkgs</depend>
  <depend>gazebo_ros2_control</depend>
  <depend>ros2_control</depend>
  <depend>ros2_controllers</depend>
  <depend>ros2controlcli</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>xacro</depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>